# gavlab_atrv

./: README.md  gavlab_atrv.rosinstall  stack.xml
gavlab_atrv/: CMakeLists.txt  Makefile  atrv.cmake  atrv.makefile  atrv_ros.cmake  mainpage.dox  manifest.xml  package.xml
gavlab_atrv/include/atrv/: atrv.h
gavlab_atrv/src/: atrv.cc
gavlab_atrv_2dnav/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
gavlab_atrv_2dnav/config/slam/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
gavlab_atrv_2dnav/launch/: move_base.launch  move_base_amcl.xml  move_base_no_localization.xml  move_base_slam.xml  navigation_amcl.launch  navigation_no_localization.launch  navigation_slam.launch  slam.launch  slam.xml
gavlab_atrv_2dnav/maps/: shelby_2f.yaml
gavlab_atrv_2dnav/scripts/: laser_filter.py  odom_to_tf.py  odom_to_tf2.py
gavlab_atrv_core/: CMakeLists.txt  package.xml
gavlab_atrv_core/examples/: atrv_example.cc  atrv_singleMc_example.cc
gavlab_atrv_core/include/atrv/: atrv.h
gavlab_atrv_core/src/: atrv.cc  atrv_corrected.cc
gavlab_atrv_core/test/: atrv_tests.cc
gavlab_atrv_description/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
gavlab_atrv_description/launch/: display.launch  display.vcg
gavlab_atrv_description/meshes/: atrv_chassis.blend  atrv_chassis.dae  kinect.tga
gavlab_atrv_description/urdf/: atrv.urdf.xacro
gavlab_atrv_estimator/: mainpage.dox  manifest.xml
gavlab_atrv_estimator/scripts/: odom_to_tf.py
gavlab_atrv_launch/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
gavlab_atrv_launch/CNS/: ATRV_Init.launch  Michael.rviz  Michael_Gmapping.launch  Michael_Joy.launch  Nav2D_Init.launch
gavlab_atrv_launch/CNS/Map_Test/: F3_Straight_Med_MBS.yaml  L1_Straight_Fast.yaml  L1_Straight_Fast_SlowTurn.yaml  L1_Swerve_Med_SlowTurn.yaml  L2_Straight_Fast.yaml  WoltF2.yaml  WoltF3.yaml
gavlab_atrv_launch/CNS_nav_configs/: amcl_CNS.launch  base_local_planner_params_CNS.yaml  costmap_common_params_CNS.yaml  global_costmap_params_CNS.yaml  local_costmap_params_CNS.yaml
gavlab_atrv_launch/displays/: default.vcg
gavlab_atrv_launch/launch/: 3Dmap_slam_joy.launch  amcl.launch  asus.launch  chrisTest.launch  datalogging.launch  hardware.launch  joy.launch  kinect.launch  kinect.xml  move_base_slam.launch  sensors.launch  sick.launch  sick.xml  slam.launch  slam_joy.launch  small_data_logging.launch  teleop.launch  transforms.xml  xbow440.launch  xbow440.xml
gavlab_atrv_launch/navigation_configs2/: base_local_planner_params.yaml  base_local_planner_params.yaml~  costmap_common_params.yaml  global_costmap_params.yaml  grant_test.launch  slam_joy.launch  small_loop_crazy_driving_prg_corrected.xml  teleop.launch  texas_willow_hallway_loop_corrected.launch  tgrant.launch  vehicle_teleop.launch
gavlab_atrv_launch/rviz/: 3Dmap.rviz  robot.rviz
gavlab_atrv_launch/scripts/: bag_data.bash  point_cloud_sync.py
gavlab_atrv_node/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
gavlab_atrv_node/launch/: test_atrv_node.launch
gavlab_atrv_node/msg/: StampedEncoders.msg
gavlab_atrv_node/src/: .gitignore  atrv_node.cc
throttle_pointcloud/: CMakeLists.txt  manifest.xml  nodelets.xml  package.xml
throttle_pointcloud/src/: cloud_throttle.cpp
