<package>
  <name>gavlab_atrv_description</name>
  <version>0.0.0</version>

  <description>
     gavlab_atrv_description
  </description>

  <maintainer email="jdp0009@auburn.edu">Dan Pierce</maintainer>

  <author>William Woodall</author>
  <license>BSD</license>
  
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>

  <run_depend>urdf</run_depend>

  <export>
  </export>

</package>